--- a/lianxi01/src/main/res/layout/activity_main.xml
+++ b/lianxi01/src/main/res/layout/activity_main.xml
@@ -1,18 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:gravity="center"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".view.activity.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
+        android:layout_weight="8.5"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"></android.support.v4.view.ViewPager>
+    <RadioGroup
+        android:id="@+id/radio_group"
+        android:layout_weight="1.5"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="0dp">
+        <RadioButton
+            android:id="@+id/radio_btua"
+            android:layout_weight="1"
+            android:button="@null"
+            android:text="首页"
+            android:textColor="#000"
+            android:gravity="center"
+            android:drawableTop="@mipmap/ic_launcher"
+            android:textSize="30dp"
+            android:checked="true"
+            android:background="@drawable/radio"
+            android:layout_width="0dp"
+            android:layout_height="match_parent" />
+        <RadioButton
+            android:id="@+id/radio_btub"
+            android:layout_weight="1"
+            android:button="@null"
+            android:text="介绍"
+            android:textColor="#000"
+            android:gravity="center"
+            android:drawableTop="@mipmap/ic_launcher"
+            android:textSize="30dp"
+            android:background="@drawable/radio"
+            android:layout_width="0dp"
+            android:layout_height="match_parent" />
+        <RadioButton
+            android:id="@+id/radio_btuc"
+            android:layout_weight="1"
+            android:button="@null"
+            android:text="我的"
+            android:textColor="#000"
+            android:gravity="center"
+            android:drawableTop="@mipmap/ic_launcher"
+            android:textSize="30dp"
+            android:background="@drawable/radio"
+            android:layout_width="0dp"
+            android:layout_height="match_parent" />
+    </RadioGroup>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
